    [metadata]
name = datacleanser
version = 0.1.0
author = Balraj Sellamuthu
author_email = balrajsellamuthu30@gmail.com
description = A utility to clean and normalize 2D data structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/balraj23/datacleanser
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy
    pandas
